--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/works.css">
+    <link rel="stylesheet" href="works.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
 <body>
     <section class="header">
         <nav>
-            <img src="../images/avatar.png" width="120" height="120">
-            <img src="../images/name.gif" width="200" height="200">
+            <img src="images/avatar.png" width="120" height="120">
+            <img src="images/name.gif" width="200" height="200">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
