--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
         <h2> Projects</h2>
         <div class="row">
-            <div class="projects-col" style="background-image: url('../images/tsc1.png')">
+            <div class="projects-col" style="background-image: url('images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
                 <a href="works.html#turtle"><div class="project-description">
                     <p><br>Turtle snowboarding game, featuring wrap around space. Follow old trails and create new ones inline to collecting all the gems.</p>
                 </div></a>
             </div>
 
-            <div class="projects-col" style="background-image: url('../images/dogy_4.png')">
+            <div class="projects-col" style="background-image: url('images/dogy_4.png')">
                 <div class="project-name">Dodgy Dice</div>
                 <a href="works.html#dice"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
@@ -61,28 +61,28 @@
                 </div></a>
 
             </div>
-            <div class="projects-col" style="background-image: url('../images/body.gif')">
+            <div class="projects-col" style="background-image: url('images/body.gif')">
                 <div class="project-name">Where is My Body</div>
                 <a href="works.html#body"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
-            <div class="projects-col" style="background-image: url('../images/Dreamchaser.png')">
+            <div class="projects-col" style="background-image: url('images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
                 <a href="works.html#dream"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
-            <div class="projects-col" style="background-image: url('../images/whale.jpg')">
+            <div class="projects-col" style="background-image: url('images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
                 <a href="works.html#whale"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
-            <div class="projects-col" style="background-image: url('../images/hex.png')">
+            <div class="projects-col" style="background-image: url('images/hex.png')">
                 <div class="project-name">Hex Harmonia</div>
                 <a href="works.html#hex"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
@@ -92,14 +92,14 @@
         </div>
         <h2>Designs</h2>
         <div class="row">
-            <div class="projects-col" style="background-image: url('../images/hat.png')">
+            <div class="projects-col" style="background-image: url('images/hat.png')">
                 <div class="project-name">Ace Attorney Game Poster</div>
                 <a href="works.html#poster"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
                     Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
                 </div></a>
             </div>
-            <div class="projects-col" style="background-image: url('../images/Aboutart 1.png')">
+            <div class="projects-col" style="background-image: url('images/Aboutart 1.png')">
                 <div class="project-name">Aboutart UI Design</div>
                 <a href="works.html#aboutArt"><div class="project-description">
                     <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
