--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/works.css">
+    <link rel="stylesheet" href="works.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
 <body>
     <section class="header">
         <nav>
-            <img src="../images/avatar.png" width="120" height="120">
-            <img src="../images/name.gif" width="200" height="200">
+            <img src="images/avatar.png" width="120" height="120">
+            <img src="images/name.gif" width="200" height="200">
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
@@ -47,10 +47,10 @@
             <li>Designed and implemented one puzzle room (raccoon rhythm puzzle room).</li>
             <li>Coordianted with sound artists during developing to make sure we were at the same page.</li>
             <ul><div class="screenshots">
-                <img src="../images/hsc1.jpg">
-                <img src="../images/hsc2.jpg">
-                <img src="../images/hsc3.jpg">
-                <img src="../images/hsc4.png">
+                <img src="images/hsc1.jpg">
+                <img src="images/hsc2.jpg">
+                <img src="images/hsc3.jpg">
+                <img src="images/hsc4.png">
             </div></ul>
             <h2>Design Details</h2>
             <p><a href="https://docs.google.com/presentation/d/1MdtTKm_kEejC5-dENBHoSK-WHHb_aEeLbEA8JtSirbc/edit?usp=sharing">Design Slides</a></p>
@@ -70,9 +70,9 @@
             <li>Responsible for Endless Scene Wrapping, UI, Camera Following and Player Controller.</li>
             <li>Imported assets and checked them have correct materials && textures.</li>
             <ul><div class="screenshots">
-                <img src="../images/tsc2.png">
-                <img src="../images/tsc3.png">
-                <img src="../images/tsc4.png">
+                <img src="images/tsc2.png">
+                <img src="images/tsc3.png">
+                <img src="images/tsc4.png">
             </div></ul>
             <h2>Design Details</h2>
             <p><a href="https://docs.google.com/presentation/d/1YwHZuAYty16D_h2eqSXJ7v1FRCIXaZYAzd0YC5o2bbo/edit?usp=sharing">Design Slides</a></p>
@@ -93,11 +93,11 @@
             <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
             <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
             <ul><div class="screenshots">
-                <img src="../images/sc1.png">
-                <img src="../images/sc2.png">
-                <img src="../images/sc3.png">
-                <img src="../images/sc2-1.png">
-                <img src="../images/DodgyDiceGameplay.gif">
+                <img src="images/sc1.png">
+                <img src="images/sc2.png">
+                <img src="images/sc3.png">
+                <img src="images/sc2-1.png">
+                <img src="images/DodgyDiceGameplay.gif">
             </div></ul>
         </div>
         <div class="work-description">
@@ -114,9 +114,9 @@
             <li>Designed game mechanics after communicating with teammates.</li>
             <li>Developed random platforms generating and the endless game scene.</li>
             <ul><div class="screenshots">
-                <img src="../images/wbsc_1.png">
-                <img src="../images/wbsc_2.png">
-                <img src="../images/wbsc_3.png">
+                <img src="images/wbsc_1.png">
+                <img src="images/wbsc_2.png">
+                <img src="images/wbsc_3.png">
             </div></ul>
         </div>
         <div class="work-description">
@@ -134,9 +134,9 @@
             <li>Used Phaser 3, JavaScript, and HTML throughout the project. </li>
             <li>Responsible for 2D player controller, UI, particle effects, scene transition and level design (level 2). </li>
             <ul><div class="screenshots">
-                <img src="../images/dcsc1.png">
-                <img src="../images/dcsc2.png">
-                <img src="../images/dcsc3.png">
+                <img src="images/dcsc1.png">
+                <img src="images/dcsc2.png">
+                <img src="images/dcsc3.png">
             </div></ul>
         </div>
 
@@ -155,10 +155,10 @@
             <li>Made poster and subsituted original art with new pixel arts (credit:https://milesandphoenix.tumblr.com/). </li>
             <li>Added new level, two player mode and changed characters moving direction. </li>
             <ul><div class="screenshots">
-                <img src="../images/acs4.png">
-                <img src="../images/acs3.png">
-                <img src="../images/acs2.png">
-                <img src="../images/acs1.png">
+                <img src="images/acs4.png">
+                <img src="images/acs3.png">
+                <img src="images/acs2.png">
+                <img src="images/acs1.png">
             </div></ul>
         </div>
         <div class="work-description">
@@ -172,9 +172,9 @@
             <li>Wrote the whole story and designed narrations.</li>
             <li>Used Twine to add Interactions.</li>
             <ul><div class="screenshots">
-                <img src="../images/kw1.png">
-                <img src="../images/kw2.png">
-                <img src="../images/kw3.png">
+                <img src="images/kw1.png">
+                <img src="images/kw2.png">
+                <img src="images/kw3.png">
             </div></ul>
         </div>
         <h4>Designs</h4>
@@ -189,10 +189,10 @@
             <li>Designed cover, narrations and interations.</li>
             <li>Used Twine, HTML and CSS.</li>
             <ul><div class="screenshots">
-                <img src="../images/psc1.png">
-                <img src="../images/psc2.png">
-                <img src="../images/psc3.png">
-                <img src="../images/psc4.png">
+                <img src="images/psc1.png">
+                <img src="images/psc2.png">
+                <img src="images/psc3.png">
+                <img src="images/psc4.png">
             </div></ul>
         </div>
         <div class="work-description">
@@ -201,9 +201,9 @@
             <p> September 2021 ~ December 2021</p>
             <li><b>CMPM 178: Human-Centerd Design Research</b> project</li>
             <ul><div class="screenshots">
-                <img src="../images/Aboutart 1.png">
-                <img src="../images/Aboutart2.png">
-                <img src="../images/Aboutart 3.png">
+                <img src="images/Aboutart 1.png">
+                <img src="images/Aboutart2.png">
+                <img src="images/Aboutart 3.png">
             </div></ul>
             <h3>About Art Overview</h3>
             <iframe width="960" height="540" src="https://www.youtube.com/embed/kSSkhDMbyRQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
