--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="projects-col" style="background-image: url('images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
-                <a href="#turtle"><div class="project-description">
+                <a href="/works.html#turtle"><div class="project-description">
                     <p><br>Turtle snowboarding game, featuring wrap around space. Follow old trails and create new ones inline to collecting all the gems.</p>
                 </div></a>
             </div>
