Changed project description in index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <div class="projects-col" style="background-image: url('images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
                 <a href="works.html#turtle"><div class="project-description">
-                    <p><br>Turtle snowboarding game, featuring wrap around space. Follow old trails and create new ones inline to collecting all the gems.</p>
+                    <p><br>Turtle snowboarding game, featuring wrap around space. 
+                        Follow old trails and create new ones inline to collecting all the gems.</p>
                 </div></a>
             </div>
 
@@ -64,29 +65,29 @@
             <div class="projects-col" style="background-image: url('images/body.gif')">
                 <div class="project-name">Where is My Body</div>
                 <a href="works.html#body"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>Where is my body is a 2D Endless runner game that the character is a ghost trying to find its body.
+                    The ghost has to avoid the obstacles on its way by jumping.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
                 <a href="works.html#dream"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>DreamChaser is a puzzle platformer in which a character would have to go through several dreams in order to retrieve their memories.
+                    There will be different challenges in each levels.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
                 <a href="works.html#whale"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>Killer Whale is an interactive novels that telling a story about a girl who has been swallowed by
+                         a killer whale and found a lot of mysteries waiting for her to resolve.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('images/hex.png')">
                 <div class="project-name">Hex Harmonia</div>
                 <a href="works.html#hex"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the hexagon
+                        to escape from the room. There are six different types of puzzles in this game. </p>
                 </div></a>
             </div>
         </div>
@@ -95,15 +96,13 @@
             <div class="projects-col" style="background-image: url('images/hat.png')">
                 <div class="project-name">Ace Attorney Game Poster</div>
                 <a href="works.html#poster"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>An Interactive Poster derived from Ace Attorney games.</p>
                 </div></a>
             </div>
             <div class="projects-col" style="background-image: url('images/Aboutart 1.png')">
                 <div class="project-name">Aboutart UI Design</div>
                 <a href="works.html#aboutArt"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
+                    <p><br>An online resources app UI design prototype.</p>
                 </div></a>
             </div> 
         </div>
