--- a/works.html
+++ b/works.html
@@ -210,10 +210,21 @@
             <h2>My contribution to <i>About Art Prototype</i></h2>
             <li>Collaborated with 3 other students in CMPM 178 to create a product for local nonprofit art organization.</li>
             <li>Used Figma Prototype features.</li>
-            <li>Desigend UI to fulfill the reqirements collected from users (through Interview)</li>
+            <li>Desigend UI to fulfill the reqirements collected from target audiences (through Interview)</li>
             <h2>Design Details</h2>
             <p><a href="https://www.figma.com/file/G80j1tcjhGEUskc4rBBRPE/Team-16-Fully-Interactive-Prototype?node-id=0%3A1&t=38YEXPOxBotvqHuR-1">Figma File</a></p>
         </div>
     </section>
+
+        <!--Toggle Menu-->
+        <script>
+            var navLinks = document.getElementById("navLinks");
+            function showMenu() {
+                navLinks.style.right = "0";
+            }
+            function hideMenu() {
+                navLinks.style.right = "-200px";
+            }
+        </script>
 </body>
 </html>
