--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>My Works</title>
+    <title>CV/Resume</title>
+    <link rel="icon" type="image/x-icon" href="website-icon.png">
 </head>
+
 <body>
     <section class="header">
         <nav>
@@ -20,7 +25,7 @@
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html"> HOME </a></li>
-                    <!-- <li><a href="about.html"> ABOUT </a></li> -->
+                    <li><a href="about.html"> ABOUT </a></li>
                     <li><a href="works.html"> WORKS </a></li>
                     <li><a href="cv.html"> CV/Résumé </a></li>
                 </ul>
@@ -33,4 +38,5 @@
         <h1>Yiyang Lu</h1>
     </section>
 </body>
+
 </html>
