--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yiyang Lu's Website</title>
+    <link rel="icon" type="image/x-icon" href="website-icon.png">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -37,8 +40,8 @@
     </section>
     <!--Games-->
     <section class="games">
-        <div class = "introductions">
-            <h1><a id = "work"> My Works</a></h1>
+        <div class="introductions">
+            <h1><a id="work"> My Works</a></h1>
             <p> Finished projects.<br><br>
                 <a href="https://yiyang-lu.itch.io/">itch.o page</a>
             </p>
@@ -48,63 +51,85 @@
         <div class="row">
             <div class="projects-col" style="background-image: url('images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
-                <a href="works.html#turtle"><div class="project-description">
-                    <p><br>Turtle snowboarding game, featuring wrap around space. 
-                        Follow old trails and create new ones inline to collecting all the gems.</p>
-                </div></a>
+                <a href="works.html#turtle">
+                    <div class="project-description">
+                        <p><br>Turtle snowboarding game, featuring wrap around space.
+                            Follow old trails and create new ones inline to collecting all the gems.</p>
+                    </div>
+                </a>
             </div>
 
             <div class="projects-col" style="background-image: url('images/dogy_4.png')">
                 <div class="project-name">Dodgy Dice</div>
-                <a href="works.html#dice"><div class="project-description">
-                    <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a multi sided die.
-                    Each time a die is rolled, a number is generated and used to fuel various behaviors of the game.</p>
-                </div></a>
+                <a href="works.html#dice">
+                    <div class="project-description">
+                        <p><br>Dodgy Dice is a top down, vampire-survivor-like bullet hell where the character is a
+                            multi sided die.
+                            Each time a die is rolled, a number is generated and used to fuel various behaviors of the
+                            game.</p>
+                    </div>
+                </a>
 
             </div>
             <div class="projects-col" style="background-image: url('images/body.gif')">
                 <div class="project-name">Where is My Body</div>
-                <a href="works.html#body"><div class="project-description">
-                    <p><br>Where is my body is a 2D Endless runner game that the character is a ghost trying to find its body.
-                    The ghost has to avoid the obstacles on its way by jumping.</p>
-                </div></a>
+                <a href="works.html#body">
+                    <div class="project-description">
+                        <p><br>Where is my body is a 2D Endless runner game that the character is a ghost trying to find
+                            its body.
+                            The ghost has to avoid the obstacles on its way by jumping.</p>
+                    </div>
+                </a>
             </div>
             <div class="projects-col" style="background-image: url('images/Dreamchaser.png')">
                 <div class="project-name">DreamChaser</div>
-                <a href="works.html#dream"><div class="project-description">
-                    <p><br>DreamChaser is a puzzle platformer in which a character would have to go through several dreams in order to retrieve their memories.
-                    There will be different challenges in each levels.</p>
-                </div></a>
+                <a href="works.html#dream">
+                    <div class="project-description">
+                        <p><br>DreamChaser is a puzzle platformer in which a character would have to go through several
+                            dreams in order to retrieve their memories.
+                            There will be different challenges in each levels.</p>
+                    </div>
+                </a>
             </div>
             <div class="projects-col" style="background-image: url('images/whale.jpg')">
                 <div class="project-name">Killer Whale</div>
-                <a href="works.html#whale"><div class="project-description">
-                    <p><br>Killer Whale is an interactive novels that telling a story about a girl who has been swallowed by
-                         a killer whale and found a lot of mysteries waiting for her to resolve.</p>
-                </div></a>
+                <a href="works.html#whale">
+                    <div class="project-description">
+                        <p><br>Killer Whale is an interactive novels that telling a story about a girl who has been
+                            swallowed by
+                            a killer whale and found a lot of mysteries waiting for her to resolve.</p>
+                    </div>
+                </a>
             </div>
             <div class="projects-col" style="background-image: url('images/hex.png')">
                 <div class="project-name">Hex Harmonia</div>
-                <a href="works.html#hex"><div class="project-description">
-                    <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the hexagon
-                        to escape from the room. There are six different types of puzzles in this game. </p>
-                </div></a>
+                <a href="works.html#hex">
+                    <div class="project-description">
+                        <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the
+                            hexagon
+                            to escape from the room. There are six different types of puzzles in this game. </p>
+                    </div>
+                </a>
             </div>
         </div>
         <h2>Designs</h2>
         <div class="row">
             <div class="projects-col" style="background-image: url('images/hat.png')">
                 <div class="project-name">Ace Attorney Game Poster</div>
-                <a href="works.html#poster"><div class="project-description">
-                    <p><br>An Interactive Poster derived from Ace Attorney games.</p>
-                </div></a>
+                <a href="works.html#poster">
+                    <div class="project-description">
+                        <p><br>An Interactive Poster derived from Ace Attorney games.</p>
+                    </div>
+                </a>
             </div>
             <div class="projects-col" style="background-image: url('images/Aboutart 1.png')">
                 <div class="project-name">Aboutart UI Design</div>
-                <a href="works.html#aboutArt"><div class="project-description">
-                    <p><br>An online resources app UI design prototype.</p>
-                </div></a>
-            </div> 
+                <a href="works.html#aboutArt">
+                    <div class="project-description">
+                        <p><br>An online resources app UI design prototype.</p>
+                    </div>
+                </a>
+            </div>
         </div>
 
 
