--- a/works.html
+++ b/works.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html"> HOME </a></li>
                     <li><a href="about.html"> ABOUT </a></li>
                     <li><a href="works.html"> WORKS </a></li>
-                    <li><a href="cv.html"> CV/Résumé </a></li>
+                    <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -103,6 +103,37 @@
         </div>
 
         <div class="work-description">
+            <h1><a id="school"></a>School Spirits
+                <a href="https://yiyang-lu.itch.io/school-spirits" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" onclick="location.href = 'https://github.com/lyiyang0702/CMPM170-Jam-3'"
+                    style="cursor:pointer" title="source code"></i>
+            </h1>
+            <p> December 2022</p>
+            <li><b>CMPM 170: Game Design Studio I</b> Jam Three project </li>
+            <h3>School Spirits - Full Walkthrough</h3>
+            <iframe width="960" height="540" src="https://www.youtube.com/embed/u-_P0Qt_ynQ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <h2>My contribution to <i>School Spirits</i></h2>
+            <li>Teamed with 8 people to create a 2D Turn-based RPG game. </li>
+            <li>Responsible for Inventory and overworld programming (Player Movements, Item collecting), helped a little
+                bit on skils.</li>
+            <li>Using Unity, C# and GitHub throughout the development.</li>
+            <ul>
+                <div class="screenshots">
+                    <img src="images/sp_sc1.png">
+                    <img src="images/sp_sc2.png">
+                    <img src="images/sp_sc3.gif">
+                </div>
+            </ul>
+            <h2>Design Details</h2>
+            <p><a
+                    href="https://docs.google.com/presentation/d/1aFXTbVPru89xRWc-QxUwvD5FHAu-ez0AGzBvx6SL4eg/edit?usp=sharing">Design
+                    Slides</a></p>
+        </div>
+
+        <div class="work-description">
             <h1><a id="dice"></a>Dodgy Dice
                 <a href="https://chonkershq.itch.io/dodgy-dice" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" onclick="location.href = 'https://github.com/metalgaiden/DodgeRoll'"
@@ -129,6 +160,7 @@
                 </div>
             </ul>
         </div>
+
         <div class="work-description">
             <h1><a id="body"></a>Where is My Body?
                 <a href="https://yiyang-lu.itch.io/where-is-my-body" class="btn_2"> Play Now</a>
