--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html"> HOME </a></li>
                     <li><a href="about.html"> ABOUT </a></li>
                     <li><a href="works.html"> WORKS </a></li>
-                    <li><a href="cv.html"> CV/Résumé </a></li>
+                    <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
