--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html"> HOME </a></li>
-                    <!-- <li><a href="about.html"> ABOUT </a></li> -->
+                    <li><a href="about.html"> ABOUT </a></li>
                     <li><a href="works.html"> WORKS </a></li>
-                    <li><a href="cv.html"> CV/Résumé </a></li>
+                    <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -49,6 +49,28 @@
 
         <h2> Projects</h2>
         <div class="row">
+
+            <div class="projects-col" style="background-image: url('images/hex.png')">
+                <div class="project-name">Hex Harmonia</div>
+                <a href="works.html#hex">
+                    <div class="project-description">
+                        <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the
+                            hexagon
+                            to escape from the room. There are six different types of puzzles in this game. </p>
+                    </div>
+                </a>
+            </div>
+            
+            <div class="projects-col" style="background-image: url('images/school\ spirits.png')">
+                <div class="project-name">School Spirits</div>
+                <a href="works.html#school">
+                    <div class="project-description">
+                        <p><br>A 2D Turn-based RPG game. Use your instruments and summon your Yokai buddies to fight
+                            against the enemy.</p>
+                    </div>
+                </a>
+            </div>
+
             <div class="projects-col" style="background-image: url('images/tsc1.png')">
                 <div class="project-name">Turtles All The Way Down</div>
                 <a href="works.html#turtle">
@@ -101,16 +123,7 @@
                     </div>
                 </a>
             </div>
-            <div class="projects-col" style="background-image: url('images/hex.png')">
-                <div class="project-name">Hex Harmonia</div>
-                <a href="works.html#hex">
-                    <div class="project-description">
-                        <p><br>Hex Harmonia is a 3D puzzle games that character need to resolve all the puzzles in the
-                            hexagon
-                            to escape from the room. There are six different types of puzzles in this game. </p>
-                    </div>
-                </a>
-            </div>
+
         </div>
         <h2>Designs</h2>
         <div class="row">
