--- a/about.html
+++ b/about.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="about.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yiyang Lu's Website</title>
+    <link rel="icon" type="image/x-icon" href="website-icon.png">
+    <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400&family=Montserrat:ital,wght@0,300;1,300&family=Silkscreen:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>About Me</title>
-    <link rel="icon" type="image/x-icon" href="website-icon.png">
 </head>
 
 <body>
@@ -25,7 +23,7 @@
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html"> HOME </a></li>
-                    <li><a href="about.html"> ABOUT </a></li>
+                    <!-- <li><a href="about.html"> ABOUT </a></li> -->
                     <li><a href="works.html"> WORKS </a></li>
                     <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
                 </ul>
