--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fa fa-times-circle" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html"> HOME </a></li>
-                    <li><a href="about.html"> ABOUT </a></li>
+                    <!-- <li><a href="about.html"> ABOUT </a></li> -->
                     <li><a href="works.html"> WORKS </a></li>
                     <!-- <li><a href="cv.html"> CV/Résumé </a></li> -->
                 </ul>
