--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="project-name">School Spirits</div>
                 <a href="works.html#school">
                     <div class="project-description">
-                        <p><br>A 2D Turn-based RPG game. Use your instruments and summon your Yokai buddies to fight
+                        <p><br>School Spirit is a 2D Turn-based RPG game. Use your instruments and summon your Yokai buddies to fight
                             against the enemy.</p>
                     </div>
                 </a>
@@ -75,7 +75,7 @@
                 <div class="project-name">Turtles All The Way Down</div>
                 <a href="works.html#turtle">
                     <div class="project-description">
-                        <p><br>Turtle snowboarding game, featuring wrap around space.
+                        <p><br>Turtles All the Way Down is a Turtle snowboarding game, featuring wrap around space.
                             Follow old trails and create new ones inline to collecting all the gems.</p>
                     </div>
                 </a>
@@ -131,7 +131,7 @@
                 <div class="project-name">Ace Attorney Game Poster</div>
                 <a href="works.html#poster">
                     <div class="project-description">
-                        <p><br>An Interactive Poster derived from Ace Attorney games.</p>
+                        <p><br>Ace Attorney Game Poster is an Interactive Poster derived from Ace Attorney games.</p>
                     </div>
                 </a>
             </div>
