--- a/works.html
+++ b/works.html
@@ -45,7 +45,7 @@
             <p> October 2022</p>
             <li><b>CMPM 170: Game Design Studio I</b> Jam One project </li>
             <h3>HexHarmonia - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/l4d3-rslow8"
+            <iframe src="https://www.youtube.com/embed/l4d3-rslow8"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -78,7 +78,7 @@
             <p> Novemeber 2022</p>
             <li><b>CMPM 170: Game Design Studio I</b> Jam Two project </li>
             <h3>Turtles All The Way Down - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/rPg4BJFoqzs"
+            <iframe src="https://www.youtube.com/embed/rPg4BJFoqzs"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -111,7 +111,7 @@
             <p> December 2022</p>
             <li><b>CMPM 170: Game Design Studio I</b> Jam Three project </li>
             <h3>School Spirits - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/u-_P0Qt_ynQ"
+            <iframe src="https://www.youtube.com/embed/u-_P0Qt_ynQ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -142,7 +142,7 @@
             <p> July 2022</p>
             <li><b>GMTK 2022 GAME JAM</b> projects </li>
             <h3>Dodgy Dice - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/eswdmvGHW6s"
+            <iframe src="https://www.youtube.com/embed/eswdmvGHW6s"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -170,7 +170,7 @@
             <p> March 2022 ~ April 2022</p>
             <li><b>CMPM 120: Game Development Experience</b> project </li>
             <h3>Where is My Body? - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/yk177VapCtM"
+            <iframe src="https://www.youtube.com/embed/yk177VapCtM"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -195,7 +195,7 @@
             <p> April 2022 ~ June 2022</p>
             <li><b>CMPM 120: Game Development Experience</b> project </li>
             <h3>DreamChaser - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/jPh8JDKGbb4"
+            <iframe wsrc="https://www.youtube.com/embed/jPh8JDKGbb4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -223,7 +223,7 @@
             <p> April 2022</p>
             <li><b>CMPM 120: Game Development Experience</b> project</li>
             <h3>Ace Attorney Shooting - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/kaH5_7Eo80U"
+            <iframe src="https://www.youtube.com/embed/kaH5_7Eo80U"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -249,7 +249,7 @@
             <p> April 2021 ~ May 2021</p>
             <li><b>CMPM 80K: Foundations of Video Game Design</b> project </li>
             <h3>Killer Whale - Full Walkthrough</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/41NFFk6Zds4"
+            <iframe src="https://www.youtube.com/embed/41NFFk6Zds4"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -272,7 +272,7 @@
             <p> September 2021 ~ December 2021</p>
             <li><b>ARTG 80G: Visual Communication and Interaction Design</b> project</li>
             <h3>Ace Attorney Interactive Poster Overview</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/wp9snBJZ1MQ"
+            <iframe src="https://www.youtube.com/embed/wp9snBJZ1MQ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -301,7 +301,7 @@
                 </div>
             </ul>
             <h3>About Art Overview</h3>
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/kSSkhDMbyRQ"
+            <iframe src="https://www.youtube.com/embed/kSSkhDMbyRQ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
